@@ -2,6 +2,11 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*pclean-0.5 (26 Aug 2010)
+
+  26 Aug 2010; <alunduil@gentoo.org> +pclean-0.5.ebuild:
+  Adding a new release of pclean
+
   22 Aug 2010; <alunduil@gentoo.org> pclean-0.3.ebuild, pclean-0.4.ebuild:
   Adding initial pclean ebuilds
 
